# synthesizer

./: .gitignore  README.md
synth/: CMakeLists.txt  main.cpp
synth/audio/: AudioGenerator.cpp  AudioGenerator.h  Delay.cpp  Envelope.cpp  Envelope.h  Filter.cpp  Oscillator.cpp
synth/model/: AudioBuffer.h  AudioGenerator.cpp  AudioGenerator.h  Delay.cpp  Delay.h  Enveloppe.cpp  Enveloppe.h  Filter.cpp  Filter.h  Oscillator.h  Parameters.h  ParametersManager.cpp  ParametersManager.h  constants.h
synth/view/: MainWindow.cpp  MainWindow.h
